02-JavaScript/02-loops/example/index.js
//loops

//for loop
//for(initial value; condition to be true; increment){
//code block
//}

for (let i = 0; i < 10; i++) {
    console.log(i);
    // console.log(i * 5);
    // console.log('I is ' + i)

    let a = 12;
    var b = 23;

    console.log(a)

};

console.log(b); //no error
// console.log(a); //error
